--- a/src/main/resources/templates/pages/notice/write.html
+++ b/src/main/resources/templates/pages/notice/write.html
@@ -11,12 +11,12 @@
 
     <h2 class="notice-form-title">공지사항 작성</h2>
 
-    <form class="notice-form" action="/submit" method="POST">
+    <form class="notice-form" action="/notice/insert" method="POST">
         <label class="notice-form-label" for="title">제목</label>
-        <input class="notice-form-input" type="text" id="title" name="title" required>
+        <input class="notice-form-input" type="text" id="title" name="noticeTitle" required>
 
         <label class="notice-form-label" for="content">내용</label>
-        <textarea class="notice-form-textarea" id="content" name="content" required></textarea>
+        <textarea class="notice-form-textarea" id="content" name="noticeContent" required></textarea>
 
         <div class="notice-form-button-wrapper">
             <button type="submit" class="notice-form-submit-button">등록하기</button>
