--- a/src/main/resources/templates/pages/notice/list.html
+++ b/src/main/resources/templates/pages/notice/list.html
@@ -35,32 +35,48 @@
 
 
     <div class="notice-write-button-wrapper">
-        <button th:if="${session.loginUser}" class="notice-write-button" type="button"
-                onclick="location.href='/board/write'">공지사항 작성
+        <button class="notice-write-button" type="button"
+                onclick="location.href='/notice/write'">공지사항 작성
         </button>
     </div>
 
     <nav aria-label="Standard pagination example" style="float: right;">
         <ul class="pagination">
 
-            <li class="page-item">
-                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage-1})}" aria-label="Previous">
+            <!-- 이전 버튼 -->
+            <li class="page-item" th:if="${pi.currentPage > 1}">
+                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage - 1})}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item disabled" th:unless="${pi.currentPage > 1}">
+                <a class="page-link" href="javascript:void(0);" tabindex="-1" aria-disabled="true">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
 
-            <li class="page-item" th:each="p : ${#numbers.sequence(pi.startPage, pi.endPage)}">
+            <!-- 페이지 번호 -->
+            <li class="page-item" th:each="p : ${#numbers.sequence(pi.startPage, pi.endPage)}"
+                th:classappend="${p == pi.currentPage} ? 'active'">
                 <a class="page-link" th:href="@{${loc}(page=${p})}">[[${p}]]</a>
             </li>
 
-            <li class="page-item">
-                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage+1})}" aria-label="Next">
+            <!-- 다음 버튼 -->
+            <li class="page-item" th:if="${pi.currentPage < pi.maxPage}">
+                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage + 1})}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+            <li class="page-item disabled" th:unless="${pi.currentPage < pi.maxPage}">
+                <a class="page-link" href="javascript:void(0);" tabindex="-1" aria-disabled="true">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
 
         </ul>
     </nav>
+
+
 
 </main>
 
