BACK : Notice 일부 수정

--- a/src/main/resources/templates/fragments/mobileMenu.html
+++ b/src/main/resources/templates/fragments/mobileMenu.html
@@ -49,6 +49,9 @@
                             로그아웃
                         </a>
                     </th:block>
+                    <a href="/notice/list" class="menu-item">
+                        공지사항
+                    </a>
                 </div>
             </div>
             <div class="menu-categoryBox" th:if="${loginUser != null && loginUser.isAdmin == 'Y'}">
