--- a/src/main/resources/templates/pages/notice/detail.html
+++ b/src/main/resources/templates/pages/notice/detail.html
@@ -23,7 +23,7 @@
 
     <div class="notice-detail-row">
         <span class="notice-label">작성일:</span>
-        <span class="notice-content" th:text="${n.noticeDate}">날짜</span>
+        <span class="notice-content" th:text="${#dates.format(n.noticeDate, 'yyyy-MM-dd')}">날짜</span>
     </div>
 
     <div class="notice-detail-row">
