--- a/src/main/resources/templates/layouts/base.html
+++ b/src/main/resources/templates/layouts/base.html
@@ -13,6 +13,7 @@
 
 <div th:replace="~{fragments/footer :: footer}"></div>
 <div th:replace="~{fragments/backdrop :: backdrop}"></div>
+<div th:replace="~{fragments/modal :: modal}"></div>
 <div th:replace="~{fragments/mobileMenu :: mobileMenu}"></div>
 </body>
 </html>
