--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -280,6 +280,11 @@ footer .footer-container .footer-copyrightText {
     height: 100%;
     z-index: 15;
     pointer-events: none;
+    opacity: 0;
+}
+
+.menu-wrapper.active {
+    opacity: 1;
 }
 
 .menu-container {
@@ -377,6 +382,43 @@ footer .footer-container .footer-copyrightText {
 .backdrop.active {
     opacity: 1;
     pointer-events: all;
+}
+
+.modal-wrapper {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
+}
+
+.modal-wrapper.active {
+    pointer-events: all;
+}
+
+.modal-box {
+    background: white;
+    border-radius: 16px;
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+    opacity: 0;
+    z-index: 21;
+    transform: translateY(50px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.modal-wrapper.active .modal-box {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: all;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
 @media (max-width: 48rem) {
