--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/global.css}">
     <link rel="stylesheet" th:href="@{/css/sign.css}"/>
     <link rel="stylesheet" th:href="@{/css/my.css}"/>
-<!--    <link rel="stylesheet" th:href="@{/css/moim_detail.css}"/>-->
+    <link rel="stylesheet" th:href="@{/css/moim_detail.css}"/>
 <!--    <link rel="stylesheet" th:href="@{/css/jsncss.css}">-->
 <!--    <link rel="stylesheet" th:href="@{/css/jsncss3.css}"/>-->
 <!--    <link rel="stylesheet" th:href="@{/css/jsncss2.css}"/>-->
@@ -21,10 +21,9 @@
     <script src="//cdn.jsdelivr.net/npm/@tabler/icons@latest/icons-react/dist/index.umd.min.js" defer></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js" defer></script>
     <script type="application/javascript" th:src="@{/js/script.js}" defer></script>
-    <script type="application/javascript" th:src="@{/moim_detail.js}" defer></script>
+    <script type="application/javascript" th:src="@{/js/moim_detail.js}" defer></script>
     <script th:src="@{/js/review_write.js}" defer></script>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" /></head>
 <body>
 <header class="header" th:fragment="navigation">
     <div class="header-container">
