--- a/src/main/resources/templates/pages/my/review/review_write.html
+++ b/src/main/resources/templates/pages/my/review/review_write.html
@@ -46,16 +46,12 @@
                 </div>
                 <input type="hidden" name="rating" id="ratingInput">
                 <div class="review-button-box">
-                    <button class="review-cancel-Button" onclick="location.href=document.referrer">취소하기</button>
+                    <button class="review-cancel-Button" type="button" onclick="location.href=document.referrer">취소하기
+                    </button>
                     <!-- 사용자가 이전에 방문한 url로 이동 -->
-                    <button class="review-enroll-Button" onclick="openModal()">등록하기</button>
-                </div>
-                <div id="confirmModal" class="modal" style="display : none;">
-                    <div class="modal-content">
-                        <p>후기를 등록하시겠습니까?</p>
-                        <button onclick="showSuccessModal()">네</button>
-                        <button id="closeModal" onclick="closeModal('confirmModal')">아니오</button>
-                    </div>
+                    <button class="review-enroll-Button" type="button"
+                            onclick="showReviewConfirmModal()">등록하기
+                    </button>
                 </div>
                 <div id="successModal" class="modal" style="display:none;">
                     <div class="modal-content">
