--- a/src/main/resources/static/css/category.css
+++ b/src/main/resources/static/css/category.css
@@ -35,3 +35,46 @@
     justify-content: center;
     align-items: center;
 }
+
+.detail-container.category {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.category-left {
+    width: 200px;
+}
+
+.category-left .category-box {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+
+.category-box > a {
+    padding: 15px 0;
+    color: #cccccc;
+}
+
+.category-box > a:hover {
+    color: black;
+}
+
+.category-box > a.active {
+    color: black;
+}
+
+.category-right {
+    flex-grow: 1;
+}
+
+@media (max-width: 48rem) {
+    .category-left {
+        display: none;
+    }
+}
