BACK : /category 템플릿 수정

--- a/src/main/resources/templates/pages/category/list.html
+++ b/src/main/resources/templates/pages/category/list.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="category-right">
-
+        <div class="subTitle" style="margin-bottom: 30px;" th:text="${selectedCategoryName}"></div>
     </div>
 </main>
 </body>
