--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,18 +12,21 @@
     <link rel="stylesheet" th:href="@{/css/sign.css}"/>
     <link rel="stylesheet" th:href="@{/css/my.css}"/>
     <link rel="stylesheet" th:href="@{/css/moim_detail.css}"/>
-<!--    <link rel="stylesheet" th:href="@{/css/jsncss.css}">-->
-<!--    <link rel="stylesheet" th:href="@{/css/jsncss3.css}"/>-->
-<!--    <link rel="stylesheet" th:href="@{/css/jsncss2.css}"/>-->
+    <!--    <link rel="stylesheet" th:href="@{/css/jsncss.css}">-->
+    <!--    <link rel="stylesheet" th:href="@{/css/jsncss3.css}"/>-->
+    <!--    <link rel="stylesheet" th:href="@{/css/jsncss2.css}"/>-->
     <link rel="stylesheet" th:href="@{/css/category.css}"/>
     <link rel="stylesheet" th:href="@{/css/notice_list.css}"/>
-    <link rel="stylesheet" th:href="@{/css/review_write.css}">
+    <link rel="stylesheet" th:href="@{/css/review_write.css}"/>
+    <link rel="stylesheet" th:href="@{/css/admin.css}"/>
     <script src="//cdn.jsdelivr.net/npm/@tabler/icons@latest/icons-react/dist/index.umd.min.js" defer></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js" defer></script>
-    <script type="application/javascript" th:src="@{/js/script.js}" defer></script>
+    <script type="application/javascript" th:src="@{/js/global.js}" defer></script>
     <script type="application/javascript" th:src="@{/js/moim_detail.js}" defer></script>
     <script th:src="@{/js/review_write.js}" defer></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" /></head>
+    <script type="application/javascript" th:src="@{/js/admin.js}" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css"/>
+</head>
 <body>
 <header class="header" th:fragment="navigation">
     <div class="header-container">
