--- a/src/main/resources/templates/pages/admin/category/list.html
+++ b/src/main/resources/templates/pages/admin/category/list.html
@@ -7,15 +7,18 @@
 <body>
 <main layout:fragment="content" class="detail-container">
     <div class="subTitle" style="margin-bottom: 30px;">카테고리 관리</div>
-    <a href="/admin/category/write">
-        <button>추가하기</button>
-    </a>
-    <table class="category-table">
+    <div style="width: 100%; display: flex; justify-content: flex-end; margin-bottom: 25px;">
+        <a href="/admin/category/write">
+            <button class="admin-button-confirm">추가하기</button>
+        </a>
+    </div>
+    <table class="admin-category-table">
         <thead>
         <tr>
-            <th>ID</th>
-            <th>카테고리명</th>
-            <th>이미지</th>
+            <th style="width: 20%;">ID</th>
+            <th style="width: 20%;">카테고리명</th>
+            <th style="width: 40%;">이미지</th>
+            <th style="width: 20%;">기능</th>
         </tr>
         </thead>
         <tbody>
@@ -23,9 +26,23 @@
             <td class="cell-center" th:text="${c.categoryId}"></td>
             <td class="cell-center" th:text="${c.categoryName}"></td>
             <td class="icon-cell">
-                <div class="category-item-icon">
-                    <img th:src="@{https://kr.object.iwinv.kr/moida/{path}(path=${c.fileConvert})}"
-                         alt="카테고리 이미지"/>
+                <div class="category-iconBox">
+                    <div class="category-item-icon">
+                        <img th:src="@{https://kr.object.iwinv.kr/moida/{path}(path=${c.fileConvert})}"
+                             alt="카테고리 이미지"/>
+                    </div>
+                </div>
+            </td>
+            <td class="func-cell">
+                <div class="category-funcBox">
+                    <a th:href="@{/admin/category/modify/{id}(id=${c.categoryId})}">
+                        <button type="button">
+                            <i class="ti ti-edit"></i>
+                        </button>
+                    </a>
+                    <button type="button" th:onclick="|confirmCategoryDelete(${c.categoryId})|">
+                        <i class="ti ti-trash"></i>
+                    </button>
                 </div>
             </td>
         </tr>
