--- a/src/main/resources/templates/pages/moim/CreateMoim.html
+++ b/src/main/resources/templates/pages/moim/CreateMoim.html
@@ -26,16 +26,9 @@
 					</div>
 					<div class="create-moim-input">
 						<select name="moim-category">
-							<option value="">-- 카테고리를 선택하세요 --</option>
-							<option value="travel">여행</option>
-							<option value="njob">N잡</option>
-							<option value="study">스터디</option>
-							<option value="sports">스포츠</option>
-							<option value="food">맛집</option>
-							<option value="culture">문화/예술</option>
-							<option value="tech">IT/기술</option>
-							<option value="volunteer">봉사활동</option>
-							<option value="etc">기타</option>
+							<th:block th:each="c : ${categoryList}">
+								<option th:value="${c.categoryId}" th:text="${c.categoryName}"></option>
+							</th:block>
 						</select>
 					</div>
 				</div>
