--- a/src/main/resources/templates/pages/my/review/review_read.html
+++ b/src/main/resources/templates/pages/my/review/review_read.html
@@ -16,44 +16,44 @@
             <div class="review-title">나만의 특별한 경험을 공유해요.</div>
             <div class="moim-title">내가 참여한 모임 : [[${moimTitle}]]</div>
             <div class="moim-info">
-                  <i class="ti ti-calendar-week"></i>[[${moimAddress1}]] 종로구 &nbsp;[[${moimDate}]] 25-05-22
+                  <i class="ti ti-calendar-week"></i>[[${moimAddress1}]]&nbsp;[[${moimDate}]]
             </div>
       </div>
       <div class="review-photo-container">
             <div class="review-photo" th:each="r : ${reviewImgList}">
-                  <img src="./review01.webp"/>
-                  <img src="./review01.webp"/>
-                  <img src="./review01.webp"/>
-                  <img src="./review01.webp"/>
+                  <img src="#"/>
             </div>
       </div>
       <div class="review-content-container" th:each="r : ${reviewList}"> <!--날짜내림차순으로 쿼리 뽑기 -->
             <div class="review-writer">
                   <div class="writer-profile">
-                        <img src="./review_read_profileImg.jpg"/>
-                        <div class="writer-name">[[${r.name}]]</div>
+                        <img src="#"/>
+                        <div class="writer-name">[[${loginUser.name}]]</div>
                   </div>
             </div>
             <div class="review-form"> 
                   <div class="review-rate-box"> <!--별 박스-->
                         <div class="review-star">
-                              <span th:each = "r : ${#numbers.sequence(1, r.reviewRate)}"class="star" data-value="1">
+                              <span th:each = "i : ${#numbers.sequence(1, r.reviewRate)}"class="star" data-value="1">
                                     <i class="ti ti-carambola"></i>
                               </span>
                         </div>
                         <div class="review-rate">([[${r.reviewRate}]])</div>
                         <div class="review-date">[[${r.reviewDate}]]</div>
-                        <div class="review-edit" th:if="${user.name = r.reviewWriter}"><!--확인할 것-->
-                              <span><i class="ti ti-pencil"></i></span>&nbsp;&nbsp;
-                              <span><i class="ti ti-trash"></i></span>
-                        </div>
-                  </div>
+                        <div class="review-edit" th:if="${loginUser.userId == r.userId}" ><!--확인할 것-->
+                        	<a th:href="@{/review/edit(no=${r.reviewId})}">
+				   				<span><i class="ti ti-pencil"></i></span>
+				  			</a>&nbsp;&nbsp;
+				         	<a th:href="@{/review/delete(no=${r.reviewId})}">
+								 <span><i class="ti ti-trash"></i></span>
+						 	</a>
+                  		</div>
 
                   <div class="review-content-title">[[${r.reviewTitle}]]</div>
                   <div class="review-content"> <!--리뷰 txt + img-->
                         <div class="review-txt">[[${r.reviewContent}]]</div>
-                        <div class="review-img"> <!--없을 수도잇자나-->
-                              <img src="./review03.webp"/>
+                        <div class="review-img">
+                              <img src="#"/>
                         </div>
                   </div>
 
